# recollect.hs

./: CHANGELOG.md  README.md  recollect.cabal
.devcontainer/: devcontainer.json
.github/workflows/: haskell-ci.yml
lib/http/: InMemory.hs
lib/http/Stack/: Api.hs  Application.hs  Handlers.hs  Types.hs
test/http/: Main.hs
test/http/Stack/: ApiSpec.hs
